--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,6 +1,47 @@
+//si no soporta webp
+.no-webp .inicio{ 
+    background-image: url(../img/header.jpg);
+}
+//si se soporta webp
+.webp .inicio{
+    background-image: url(../img/header.webp);
+}
+
+
 
 .header{
     background-color: $grisOscuro;
     padding: 1rem 0 3rem 0;
     
+    &.inicio{
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+
+        @include tablet{
+            min-height: 70rem;
+        }
+
+        .contenido-header{
+            @include tablet{
+                min-height: 70rem;
+            }
+        }
+    }
+}
+
+.contenido-header{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+
+    h1{
+        text-align: left;
+        color: $blanco;
+        line-height: 2;
+        font-weight: bold;
+        max-width: 60rem;              //sallto de linea
+        text-transform: capitalize;
+    }
 }
