--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -2,7 +2,8 @@
 .barra{
     display: flex;
     flex-direction: column;
-
+    align-items: center;
+    padding-top: 3rem;
     @include tablet{
         flex-direction: row;
         justify-content: space-between;
@@ -10,11 +11,32 @@
 }
 
 .navegacion{
+
+    @include tablet{
+        display: flex; 
+        
+    }
     
     a{
         color: $blanco;
         text-decoration:none;
         font-size: 2.2rem;
+        display: block;
+        text-align: center;
+
+        &:hover{
+            color: $verde;
+        }
+
+        @include tablet{
+            margin-right: 2rem;
+            font-size: 1.8rem;
+            &:last-of-type{
+                margin-right: 0;
+            }
+        }
     }
+
+    
 }
 
