--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,6 +3,7 @@
 @import 'base/mixins';
 @import 'base/globales';
 @import 'base/utilidades';
+@import 'base/botones';
 
 /** UI **/
 @import 'layout/header';
@@ -10,3 +11,6 @@
 @import 'layout/navegacion';
 @import 'layout/iconos';
 @import 'layout/anuncios';
+@import 'layout/contactanos';
+@import 'layout/inferior';
+@import 'layout/testimoniales';
