--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,3 +14,9 @@
 @import 'layout/contactanos';
 @import 'layout/inferior';
 @import 'layout/testimoniales';
+@import 'layout/formulario';
+
+
+// PAGINAS INTERNAS
+@import 'internas/nosotros';
+
