--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,6 +4,8 @@
 @import 'base/globales';
 @import 'base/utilidades';
 @import 'base/botones';
+@import 'base/dark-mode';
+
 
 /** UI **/
 @import 'layout/header';
