--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -1,7 +1,11 @@
-.boton-amarillo{
-    @include boton($amarillo);
+.boton-amarillo {
+    @include boton($amarillo, inline-block);
 }
 
-.boton-verde{
-    @include boton($verde);
+.boton-amarillo-block {
+    @include boton($amarillo, block);
+}
+
+.boton-verde {
+    @include boton($verde, inline-block);
 }
