--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -32,9 +32,11 @@
     margin-top: 2.5rem;
     display: $display;
     border: none;
+    
 
     &:hover{
         background-color: darken($bgColor, 5);
+        cursor: pointer;
     }
     
 }
