--- a/src/scss/internas/_admin.scss
+++ b/src/scss/internas/_admin.scss
@@ -1,3 +1,6 @@
+
+/*********************MENSAJES DE ALERTA Y CONFIRMACION************************/
+
 .alerta{
     padding: .5rem;
     text-align: center;
@@ -11,5 +14,27 @@
 
     &.exito{
         background-color: $verde;
+    }
+}
+
+/*********************  ESTILOS A LA TABLA DE PROPIEDADES ************************/
+
+table.propiedades{
+    margin-top: 4rem;
+    width: 100%;
+    border-spacing: 0;
+
+    thead{
+        background-color: $verde;
+
+        th{
+            color: $blanco;
+            padding: 2rem;
+        }
+    }
+
+    .imagen-tabla{
+        width: 10rem;
+        
     }
 }
